tests/neg/i2673b.scala
//> using options -Xfatal-warnings

package Foos

class Bar // error
object bar
